# abstract_algebra

./: .gitmodules  main.cpp  meson.build
include/: abstract_algebra.hpp
